--- a/ppms_project/profilingApp/templates/activities/index.html
+++ b/ppms_project/profilingApp/templates/activities/index.html
@@ -1,26 +1,167 @@
-<form>
-    <input type="text" name="text" id="txt">
-    <button type="submit">Submit</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.user_type.label }}
-    {{ form.user_type}}
-
-    {{ form.first_name.label}}
-    {{ form.first_name }}
-
-    {{ form.last_name.label }}
-    {{ form.last_name }}
-
-    {{ form.email.label }}
-    {{ form.email }}
-
-    {{ form.password1.label }}
-    {{ form.password1 }}
-
-    {{ form.password2.label }}
-    {{ form.password2 }}
-    <button type="submit">Submit</button>
-</form>
+    <link rel="stylesheet" href="../static/CSS/styles.css">
+    <link rel="stylesheet" href="../static/CSS/font-awesome/css/all.min.css">
+    <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
+    <script src="../static/Javascript/js/jquery.min.js"></script>
+    <title>Document</title>
+</head>
+<body>
+    <!-- Header -->
+    <div class="site-header" >
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark index__navbar scrolled">
+        <div class="container-fluid">
+            <div>
+                <img class="navbar-icon" style="margin-left:15px;" src="../static/Media/avatar.png" alt="dasma-logo">
+                <span id="hideHomeTitle" class="brand__name" style="color:#2c5f2dff;">City of Dasmariñas - Preschooler Profiling and Monitoring</span>
+            </a>
+            </div>
+        </div>
+        </nav>
+    </div>
+    <!-- Form -->
+    <div class="container-fluid" id="homeBody">
+        <br>
+        <div class="form">
+            <div class="form-toggle"></div>
+            <div class="form-panel one">
+                <div class="form-header">
+                    <h1>Login</h1>
+                </div>
+                <div class="form-content">
+                    <form action="">
+                        <div class="form-group">
+                            <label for="">Username</label>
+                            <input type="text" id="username" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label for="">Password</label>
+                            <input type="password" id="password" name="password">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-remember">
+                                <input type="checkbox">Remember Me
+                            </label><a class="form-recovery" href="">Forgot Password?</a>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit">Log In</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="form-panel two">
+                <div class="form-header">
+                    <h1>Register Account</h1>
+                </div>
+                <div class="form-content">
+                    <form method="POST" action="">
+                        {% csrf_token %}
+                        <div class="input-group mb-3">
+                            <label for="">User Type</label>
+                            {{ form.user_type }}
+                            <br>
+                        </div>
+                        
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="">First Name</label>
+                                    {{ form.first_name }}
+                                </div>
+                                <div class="col">
+                                    <label for="">Last Name</label>
+                                    {{ form.last_name }}
+                                </div>
+                            </div>
+                        </div>
+                
+                        <div class="form-group">
+                            <label for="">Email Address</label>
+                            {{ form.email }}
+                        </div>
+                
+                        <div class="form-group">
+                            <label for="">Password</label>
+                            {{ form.password1 }}
+                        </div>
+                
+                        <div class="form-group">
+                            <label for="">Confirm Password</label>
+                            {{ form.password2 }}
+                        </div>
+                
+                        <div class="form-group">
+                            <button type="submit">Register</button>
+                        </div>
+                    </form>
+                </div>  
+            </div>
+        </div>
+        <!-- Spacing -->
+        <br><br><br><br><br>
+        <!-- Spacing -->
+    </div>
+    <!-- Footer -->
+    <div class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2 class="footer-heading mb-4">About</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Modi cumque tenetur inventore veniam, hic vel ipsa necessitatibus 
+                        ducimus architecto fugiat!
+                    </p>
+                    <div class="my-5">
+                        <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                        <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Quick Links</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">FAQs</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Helpful Link</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">Healthcare Professional</a></li>
+                            <li><a href="#">LGU Facilities</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4">
+                            <h2 class="footer-heading mb-4">Resources</h2>
+                            <ul class="list-unstyled">
+                            <li><a href="#">NNC Website</a></li>
+                            <li><a href="#">DOH Website</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <div class="border-top pt-5">
+                        <p class="copyright"><small>
+                        Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
+                        </small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+</body>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!-- <script src="../static/Javascript/testscript.js"></script> -->
+</html>
