--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -166,4 +166,5 @@
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="../static/Javascript/testscript.js"></script>
+{% comment %} <script src="{% static '/Javascript/testscript.js' %}"></script> {% endcomment %}
 </html>
