--- a/ppms_project/profilingApp/templates/activities/Initial.html
+++ b/ppms_project/profilingApp/templates/activities/Initial.html
@@ -165,4 +165,5 @@
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="../static/Javascript/testscript.js"></script>
+<script src="{% static '/Javascript/testscript.js' %}"></script>
 </html>
