--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -1,13 +1,13 @@
-<html lang="en">
+<html lang="en">{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../static/CSS/styles.css">
-    <link rel="stylesheet" href="../static/CSS/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="../static/CSS/css/bootstrap.min.css">
-    <script src="../static/Javascript/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
 
     <title>Home</title>
 </head>
@@ -224,10 +224,9 @@
       </div>
   </div>
 </div>
-<script src="../static/Javascript/js/functions.js"></script>
-<script src="../static/Javascript/js/bootstrap.bundle.min.js"></script>
+<script src="{% static '/Javascript/js/functions.js' %}"></script>
+<script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="../static/Javascript/testscript.js"></script>
-{% comment %} <script src="{% static '/Javascript/testscript.js' %}"></script> {% endcomment %}
+<script src="{% static '/Javascript/testscript.js' %}"></script>
 </html>
