--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -57,7 +57,7 @@
                   <div class="card text-dark bg-light mb-4">
                       <div class="card-header"><i class="fas fa-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
                       <div class="card-body">
-                          <h5 class="card-title">200</h5>
+                          <h5 class="card-title">{{ validated_count }}</h5>
                       </div>
                   </div>
               </div>
@@ -65,7 +65,7 @@
                   <div class="card text-dark bg-light mb-4">
                       <div class="card-header"><i class="fas fa-spinner" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
                       <div class="card-body">
-                          <h5 class="card-title">200</h5>
+                          <h5 class="card-title">{{ invalidated_count }}</h5>
                       </div>
                   </div>
               </div>
@@ -164,6 +164,27 @@
 <script src="{% static '/Javascript/js/functions.js' %}"></script>
 <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
 </body>
+
+<script>
+    Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+    Chart.defaults.global.defaultFontColor = '#292b2c';
+
+    // Pie Chart Example
+    var data_count = JSON.parse('{{ count_data|escapejs }}')
+    var ctx = document.getElementById("myPieChart");
+    var myPieChart = new Chart(ctx, {
+    type: 'pie',
+    data: {
+        labels: ["Validated", "Invalidated"],
+        datasets: [{
+        data: data_count,
+        backgroundColor: ['#dc3545', '#ffc107', '#28a745'],
+        }],
+    },
+    });
+</script>
+
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static '/Javascript/testscript.js' %}"></script>
 </html>
