--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
 
     <title>Administration Home</title>
 </head>
@@ -163,9 +164,8 @@
 </div>
 <script src="{% static '/Javascript/js/functions.js' %}"></script>
 <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
-</body>
-
 <script>
+    // Set new default font family and font color to mimic Bootstrap's default styling
     Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
     Chart.defaults.global.defaultFontColor = '#292b2c';
 
@@ -175,15 +175,16 @@
     var myPieChart = new Chart(ctx, {
     type: 'pie',
     data: {
-        labels: ["Validated", "Invalidated", "Parents", "Preschoolers"],
+        labels: ["Validated", "Invalidated", "Parent", "Preschooler"],
         datasets: [{
         data: data_count,
         backgroundColor: ['#dc3545', '#ffc107', '#28a745'],
         }],
     },
     });
-</script>
 
+</script>
+</body>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="{% static '/Javascript/testscript.js' %}"></script>
