--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -23,7 +23,11 @@
                     <thead>
                         <tr>
                             <th scope="col">No.</th>
-                            <th scope="col">Name of BHW </th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Middle Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Suffix</th>
+                            <th scope="col">Phone Number</th>
                             <th scope="col">Email</th>
                             <th scope="col">Barangay Designation</th>
                             <th scope="col" class="nosort text-center">Action</th>
@@ -33,7 +37,11 @@
                         {% for bhw in bhws %}
                         <tr>
                             <td></td>
-                            <td>{{ bhw.user.first_name }} {{ bhw.user.last_name }} </td>
+                            <td>{{ bhw.user.first_name }}</td>
+                            <td>{{ bhw.user.middle_name }}</td>
+                            <td>{{ bhw.user.last_name }}</td>
+                            <td>{{ bhw.user.suffix_name }}</td>
+                            <td>09123456789</td>
                             <td>{{ bhw.user.email }}</td>
                             <td>{{ bhw.bhw_barangay }}</td>
                             <td style="text-align: center;">
@@ -65,7 +73,7 @@
                 'bSortable': false,
                 'aTargets': ['nosort'],
                 'orderable': false,
-                'targets': [0, 4],
+                'targets': [0, 8],
             }],
             order: [[1, 'asc']],
             });
