--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Profile.html
@@ -1,84 +1,54 @@
-{% extends 'activities/BHW Home.html' %} <!-- header and footer of page linked from bhw home html file -->
+{% extends 'activities/BHW Home.html' %} <!-- header and footer of page linked from admin home html file -->
 {% load static %}
 {% block dashboard %}
-<div id="grid" class="container-fluid" style="padding:7%; margin-top:50px;">
+<!-- Dashboard -->
+<div id="grid" class="container-fluid" style="padding:7%; margin: top 65px;">
     <div class="container-grid">
-        <div class="row"> 
-            <div class="col">
-                <h3 style="text-align:left;">Preschoolers' Profile</h3>
+        <div class="">
+            <div class="row"> 
+                <div class="col">
+                    <h3 style="text-align:left;">Preschooler's Nutritional Status</h3>
+                </div>
             </div>
+        <hr>
+        <br>
         </div>
-    <hr>
-</div>
-    
+    </div>
 <!-- DataTables -->
 <div class="container text-black">
     <div class="row">
         <div class="col">
             <div class="table-responsive">
-                <table class="table table-sm" id="table_preschoolers">
+                <table class="table table-sm" id="table_validation">
                     <thead>
                         <tr>
                             <th scope="col">No.</th>
-                            <th scope="col">Child Name</th>
-                            <th scope="col">Date of Birth</th>
-                            <th scope="col">Date Measured</th>
-                            <th scope="col">Gender</th>
-                            <th scope="col">Weight</th>
-                            <th scope="col">Height</th>
-                            <th scope="col">Age in Months</th>
-                            <th scope="col">WFA Status</th>
-                            <th scope="col">HFA Status</th>
-                            <th scope="col">WHFA Status</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Middle Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Suffix</th>
+                            <th scope="col">Birthdate</th>
+                            <th scope="col">Age in months</th>
+                            <th scope="col">WHFA STATUS</th>
                             <th scope="col" class="nosort text-center">Action</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
-                            <td>Edinburgh</td>
-                            <td>61</td>
-                            <td>2011-04-25</td>
+                            <td></td>
                             <td>1</td>
                             <td>1</td>
                             <td>1</td>
                             <td>1</td>
-                            <td>1</td>
+                            <td>09123456789</td>
                             <td>1</td>
                             <td>1</td>
                             <td style="text-align: center;">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
-                                    </div>
+                                <div>
+                                    <a href="{% url 'view_preschooler' %}"><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
                                 </div>
                             </td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Tokyo</td>
-                            <td>63</td>
-                            <td>2011-07-25</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td>1</td>
-                            <td style="text-align: center;">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">View Profile</button></a>
-                                    </div>
-                                    <div class="col">
-                                        <a href=""><button type="button" style="background-color: #188045; color: white;" class="btn">Delete</button></a>
-                                    </div>
-                                </div>
-                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -86,21 +56,21 @@
         </div>
     </div>
 </div>
-<hr>
-<br>
-    <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+    <hr>
+    <br>
+
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
         
     <script>
-        var t = $('#table_preschoolers').DataTable({
+        var t = $('#table_validation').DataTable({
             dom: 'Blfrtip',
             info: 'true',
             aoColumnDefs: [{
                 'bSortable': false,
                 'aTargets': ['nosort'],
                 'orderable': false,
-                'targets': [0, 4],
+                'targets': [0, 7],
             }],
             order: [[1, 'asc']],
             });
@@ -110,5 +80,6 @@
                 this.data(i++);
             });}).draw();
     </script>
+
 </div>
 {% endblock %}
