--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -61,11 +61,11 @@
                                     Admin
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end " aria-labelledby="dropdownUser1">
-                                    <li><a class="dropdown-item" href="{% url 'admin_home' %}">Home</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'admin_home2' %}">Preschooler Status</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'bhw_validation' %}">Validate BHW</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'admin_home' %}"><i class="fa fa-fw fa-home mx-1"></i>Home</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'admin_home2' %}"><i class="fa fa-fw fa-id-card mx-1"></i>Preschooler Status</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'bhw_validation' %}"><i class="fa fa-fw fa-user-nurse mx-1"></i>Validate BHW</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
                                 </ul>
                             </div>
                         </li>
